// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot already-imported 1`] = `
"
// @flow
import type { State as AppState } from './App/reducer'

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
import type { State as AppState } from './App/reducer';

export type State = {
  App: AppState;
};
"
`;

exports[`snapshot basic 1`] = `
"


      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
import type { State as AppState } from \\"./App/reducer\\";

export type State = {
  App: AppState;
};
"
`;

exports[`snapshot reducer-basic 1`] = `
"
// @flow

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
import type { State as AppState } from \\"./App/reducer\\";

export type State = {
  App: AppState;
};
"
`;

exports[`snapshot remove 1`] = `
"
// @flow
import type { State as AppState } from './App/reducer'

      ↓ ↓ ↓ ↓ ↓ ↓


"
`;

exports[`snapshot some-state 1`] = `
"
// @flow
import type { State as HogeState } from './Hoge/reducer'

export type State = {
  hoge: HogeState,
}

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
import type { State as AppState } from './App/reducer';
import type { State as HogeState } from './Hoge/reducer';

export type State = {
  App: AppState;
  Hoge: HogeState;
};
"
`;

exports[`snapshot some-state2 1`] = `
"
// @flow
import type { State as HogeFugaState } from './HogeFuga/reducer'

export type State = {
  hoge: HogeState,
}

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
import type { State as AppState } from './App/reducer';
import type { State as HogeFugaState } from './HogeFuga/reducer';

export type State = {
  App: AppState;
  HogeFuga: HogeFugaState;
};
"
`;
